DCAS-231: remove secondary nav inline padding to avoid overflow handling

--- a/src/stories/Organisms/Header/Header.css
+++ b/src/stories/Organisms/Header/Header.css
@@ -12,6 +12,10 @@
   gap: 0;
 }
 
+.header .secondary-nav .reel {
+  padding-inline: 0;
+}
+
 .header .secondary-nav a {
   --color: var(--color-base-dark-x);
   --accent-color: var(--color-base);
